--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,13 @@ body {
   justify-content: space-between;
   color: #536471;
 }
+
+
+.IronTitle{
+
+  text-align: center;
+  color: blue;
+  
+
+
+}
