--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,11 +13,13 @@ body {
 
 .tweet {
   margin: 0 auto;
+  margin-bottom: 1rem;
   min-width: 480px;
   max-width: 640px;
   min-height: 80px;
   padding: 10px;
   border: 1px solid #ccc;
+  border-radius: 0.4rem;
   display: flex;
   font-size: 1.1rem;
   line-height: 18px;
@@ -63,7 +65,7 @@ body {
 }
 
 .timestamp::before {
-  content: "·";
+  content: '·';
   padding-right: 0.3em;
   font-size: 1.1rem;
   font-weight: 600;
