--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,15 @@ body {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
   padding: 20px;
+  gap: 20px;
 }
 
 .tweet {
+  width: 100%;
   margin: 0 auto;
   min-width: 480px;
   max-width: 640px;
