--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+body { 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -21,6 +21,7 @@ body {
   display: flex;
   font-size: 1.1rem;
   line-height: 18px;
+  margin-bottom: 2rem;
 }
 
 .body {
