all iterations complete

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+#actions {
+  display:flex;
+  justify-content: space-around;
+}
+
+#message {
+  text-align: left;
+}
