--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,13 @@ body {
   min-width: 480px;
   max-width: 640px;
   min-height: 80px;
-  padding: 10px;
+  padding: 20px;
   border: 1px solid #ccc;
   display: flex;
   font-size: 1.1rem;
   line-height: 18px;
+  margin-bottom: 40px;
+  border-radius: 8px;
 }
 
 .body {
@@ -42,7 +44,7 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .name {
@@ -53,7 +55,7 @@ body {
 
 .handle {
   color: #536471;
-  margin-left: 3px;
+  margin-left: 10px;
   margin-right: 3px;
 }
 
