--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
   margin-right: 10px;
 }
 
+/* 
 .name {
   font-weight: bold;
   margin-bottom: 0.5em;
@@ -55,7 +56,7 @@ body {
   color: #536471;
   margin-left: 3px;
   margin-right: 3px;
-}
+} */
 
 .timestamp {
   color: #536471;
