--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   font-size: 1.1rem;
   line-height: 18px;
+  background-color: aqua;
 }
 
 .body {
@@ -43,6 +44,15 @@ body {
   height: 50px;
   border-radius: 50px;
   margin-right: 10px;
+  background-color: green;
+}
+
+.profile img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  margin-right: 10px;
+  background-color: blue;
 }
 
 .name {
